<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#C3F1BF"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/food" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#037E08"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signIntoYourAccount"
        android:textColor="#037E08"
        android:textSize="20dp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:hint="Email id"
        android:textColorHint="@color/black"
        app:startIconDrawable="@drawable/ic_baseline_mail_24"
        app:counterTextColor="@color/black"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxStrokeColor="#9F9D9D"
        app:startIconTint="#9F9D9D"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundMode="outline"
        android:layout_marginTop="26dp"
        app:errorEnabled="true"
        android:layout_marginEnd="32dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="80"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />


    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:boxStrokeColor="#9F9D9D"
        app:boxStrokeErrorColor="#9F9D9D"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        android:backgroundTintMode="add"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#9F9D9D"
        app:counterTextColor="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxBackgroundMode="outline"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        android:layout_marginEnd="32dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgotyourpassword"
            android:textAlignment="viewEnd"
            android:layout_marginTop="8dp"
            android:layout_marginRight="38dp"
            android:textColor="#037E08"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpassword" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressBarLogin"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:backgroundTint="#037E08"
        android:text="Login"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="#fff" />


        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp">
            <View
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_marginTop="12dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="20dp"
                android:gravity="center"
                android:textColor="@color/btnColor"
                />
            <View
                android:layout_width="140dp"
                android:layout_height="2dp"
                android:background="@color/white"
                android:layout_marginTop="12dp"
                />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/txtdnthaveacc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        >


        <ImageView
            android:id="@+id/google"
            android:layout_width="48dp"
            android:layout_height="30dp"
            android:src="@drawable/search"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Google"
            android:textSize="25dp"
            android:layout_marginEnd="60dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/donthaveaccount"
        android:textColor="#037E08"
        android:textSize="18dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>