<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/bg_feedo"
    tools:context=".OtpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:padding="16dp"
        android:text="@string/verification_code"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_verification_code_sent_to_n_91xxxxxxx"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />
    <TextView
        android:id="@+id/getPhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="PhoneNo"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp1"
            android:background="@drawable/otp_box_bg"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/btnColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/otp2"
            android:background="@drawable/otp_box_bg"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/btnColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/otp3"
            android:background="@drawable/otp_box_bg"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/btnColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id="@+id/otp4"
            android:background="@drawable/otp_box_bg"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/btnColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/otp5"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:background="@drawable/otp_box_bg"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/btnColor"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/otp6"
            android:background="@drawable/otp_box_bg"
            android:layout_width="40dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/btnColor"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't receive the otp "
            android:textSize="14dp"/>

        <TextView
            android:id="@+id/resentOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resent OTP"
            android:keyboardNavigationCluster="true"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/btnColor"/>
</LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/validateOtp"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btnColor"
        android:text="@string/validate_otp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />
        <ProgressBar
            android:id="@+id/progressBarOtpVerify"
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>


</LinearLayout>